--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div class="container">
-    <h1>hello</h1>
+    <h2>hello python</h2>
     </div>   
 {% endblock content %}
       
