--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 {% endblock title %}
 {% block content %}
     <div class = "container">
-          {% comment %} <h1>{{welcome_text}}</h1> {% endcomment %}
+         
         <div class ="row mt-5">
             <div class = "col-lg-4">
                 <img src="{% static 'images/boot.jpg' %}" alt="Notes" class="rounded-lg shadow" width="360" height="250">
@@ -24,7 +24,7 @@
             <center><p class="h1 text-primary">Quick and Easy to use ,Anytime! AnYwhere!</p></center>
             <center><p class="h2 mt-3">"plan your day better ,get your life organise ....."</p></center>
             
-            <center><a href="{% url 'todolist'%}"><button type="button" class="btn btn-dark mt-3 shadow">Lets Get startted </button></center></a>
+            <center><a href="{% url 'todolist'%}"><button type="button" class="btn btn-dark mt-3 shadow">updated index</button></center></a>
         </div>    
     </div>   
 {% endblock content %}
