about file updated

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 {% comment %} {% extends 'base.html' %} {% endcomment %}
 
 {% block title %}
-    <title>about us - Taskmate12 </title>
+    <title>about us -added file </title>
 {% endblock title %}
 
 {% block content %}
