contact file updated

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 {% comment %} {% extends 'base.html' %} {% endcomment %}
 
 {% block title %}
-    <title>contact us - Taskmate 12</title>
+    <title>contact us -added file</title>
 {% endblock title %}
 
 {% block content %}
