--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 
 {% block title %}
-    <title>welcome to - Taskmate 12</title>
+    <title>edit index</title>
 {% endblock title %}
 {% block content %}
     <div class = "container">
